cambio radical con ayuda de CHAT GPT

--- a/index.html
+++ b/index.html
@@ -7,18 +7,25 @@
     <title>CONMEBOL</title>
 </head>
 <body>
-    <div id="parallax">
-        <div class="layer bg" data-speed="0"></div>
-        <div class="layer overlay" data-speed="0"></div>
-        <div class="layer banner" data-speed="0"></div>
-        <div class="layer cup" data-speed="0"></div>
-    </div>
-    <section>
-        <img src="/sources/img/la-gran.png">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat labore ullam laudantium fuga quod obcaecati repellendus? Error aspernatur incidunt doloremque placeat commodi consequatur quo soluta, sunt quasi impedit sequi enim.
-        Inventore explicabo cupiditate odio a illo voluptatum facere magni, quae dolor facilis necessitatibus blanditiis ut officiis similiqueexpedita nostrum iure aperiam assumenda sunt corrupti commodi temporibus deleniti. Nihil, enim veritatis?
-        </p>
-    </section>
+ <!-- Fondo general -->
+ <div class="parallax fondo1"></div>
+
+ <!-- Contenido normal entre los fondos parallax -->
+ <div class="content content2">
+    <img class="img2A" src="/sources/img/copa.png" alt="">
+    <img class="img2B" src="/sources/img/la-gran.png" alt="">
+     <p></p>
+ </div>
+ <div class="parallax fondo2"></div>
+
+ <div class="content content1">
+     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, vero culpa eveniet recusandae illum repudiandae libero distinctio quia praesentium blanditiis, exercitationem reiciendis neque soluta tenetur aspernatur? Alias maiores explicabo asperiores.
+     Nostrum nobis voluptate, omnis corrupti quis, non neque magni, pariatur dolorum aliquam hic inventore sit blanditiis dolorem exercitationem eligendi deleniti architecto sed quibusdam perspiciatis velit! Eum dolor dolores sunt officia.
+    </p>
+     <img class="img1B" src="/sources/img/estadio.png" alt="">
+     <img class="img1A" src="/sources/img/detalle.png" alt="">
+ </div>
+
 
 </body>
 </html>
