cambiando los png por jpg
Cambio todos los .png por .jpg porque con archivos .png GitHub Pages los rompe y no se visualizan en la web

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
  <!-- Fondo general -->
  <div class="parallax fondo1"></div>
 
- <!-- Contenido normal entre los fondos parallax -->
+ <!-- Contenido normal entre los fondos parallax --> 
  <div class="content content2">
-    <img class="img2A" src="/sources/img/copa.png" alt="">
-    <img class="img2B" src="/sources/img/la-gran.png" alt="">
+    <img class="img2A" src="/sources/img/copa.jpg" alt="">
+    <img class="img2B" src="/sources/img/la-gran.jpg" alt="">
      <p></p>
  </div>
  <div class="parallax fondo2"></div>
@@ -22,8 +22,8 @@
      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, vero culpa eveniet recusandae illum repudiandae libero distinctio quia praesentium blanditiis, exercitationem reiciendis neque soluta tenetur aspernatur? Alias maiores explicabo asperiores.
      Nostrum nobis voluptate, omnis corrupti quis, non neque magni, pariatur dolorum aliquam hic inventore sit blanditiis dolorem exercitationem eligendi deleniti architecto sed quibusdam perspiciatis velit! Eum dolor dolores sunt officia.
     </p>
-     <img class="img1B" src="/sources/img/estadio.png" alt="">
-     <img class="img1A" src="/sources/img/detalle.png" alt="">
+     <img class="img1B" src="/sources/img/estadio.jpg" alt="">
+     <img class="img1A" src="/sources/img/detalle.jpg" alt="">
  </div>
 
 
